--- a/src/components/RecipeHeader/RecipeHeader.module.scss
+++ b/src/components/RecipeHeader/RecipeHeader.module.scss
@@ -1,4 +1,4 @@
-@use '../../../assets/scss/partials/colors';
+@use 'colors' as c;
 
 .container {
   padding: 0 10px;
@@ -21,7 +21,7 @@
   margin-right: 20px;
   width: 100%;
   &:first-letter {
-    color: colors.$orange;
+    color: c.$orangered;
   }
 }
 
