revert RecipeContent creation & run prettier

--- a/src/components/CarouselVegList/CarouselVegList.module.scss
+++ b/src/components/CarouselVegList/CarouselVegList.module.scss
@@ -6,11 +6,11 @@
   justify-content: center;
 }
 
-.container, .type {
+.container,
+.type {
   display: flex;
   justify-content: center;
 }
-
 
 .type {
   text-transform: lowercase;
