--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -6,11 +6,12 @@
   flex-direction: column;
   width: 100%;
   font-size: 12px;
-   p:first-letter, a {
+  p:first-letter,
+  a {
     color: orangered;
-     font-weight: 500;
+    font-weight: 500;
   }
-  
+
   a {
     text-decoration: none;
     padding-left: 5px;
@@ -18,7 +19,7 @@
       cursor: pointer;
     }
   }
-  @media(min-width: 768px) {
+  @media (min-width: 768px) {
     font-size: 16px;
   }
 }
