--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -15,27 +15,28 @@
     padding-right: 10px;
     font-size: 2rem;
   }
-  @media(min-width: 500px) {
+  @media (min-width: 500px) {
     padding: 10px 20px;
     position: relative;
     height: 50px;
     margin-bottom: 20px;
   }
-  @media(min-width: 768px) {
+  @media (min-width: 768px) {
     padding: 20px 0;
     height: auto;
     margin-bottom: 0;
   }
   .subtitle {
     display: none;
-    @media(min-width: 500px) {
+    @media (min-width: 500px) {
       display: block;
       padding-left: 20px;
     }
   }
 }
 
-h1, .subtitle {
+h1,
+.subtitle {
   color: c.$dark-green;
 }
 
