--- a/src/components/Recipe/recipe.module.scss
+++ b/src/components/Recipe/recipe.module.scss
@@ -30,23 +30,30 @@ $pattern: 'polkadots.svg';
     margin-bottom: 20px;
   }
 
-  @media(min-width: 768px) {
+  @media (min-width: 768px) {
     height: 300px;
     max-width: 100%;
   }
 
-  @media(min-width: 1024px) {
+  @media (min-width: 1024px) {
     width: 800px;
   }
 }
 
+.card {
+  line-height: 1.5;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 100%;
+}
+
 .generals {
   display: grid;
-  grid-template-areas: "img""header""generals";
+  grid-template-areas: 'img''header''generals';
   grid-template-rows: 135px 50px 100px;
 
-  @media(min-width: 768px) {
-    grid-template-areas: "img header""img generals";
+  @media (min-width: 768px) {
+    grid-template-areas: 'img header''img generals';
     grid-gap: $layout-padding-lg;
     grid-template-columns: 320px 1fr;
     grid-template-rows: 40% 1fr;
@@ -55,11 +62,11 @@ $pattern: 'polkadots.svg';
 
 .details {
   display: grid;
-  grid-template-areas: "img""header""ingredients""instructions";
+  grid-template-areas: 'img''header''ingredients''instructions';
   grid-row-gap: 15px;
 
-  @media(min-width: 768px) {
-    grid-template-areas: "img header""img ingredients""instructions instructions";
+  @media (min-width: 768px) {
+    grid-template-areas: 'img header''img ingredients''instructions instructions';
     grid-gap: $layout-padding-lg;
     grid-template-columns: 320px 1fr;
     grid-template-rows: repeat(4, auto);
@@ -75,7 +82,7 @@ $pattern: 'polkadots.svg';
   border-top-right-radius: $border-radius;
   border-bottom: 2px dashed c.$orangered;
 
-  @media(min-width: 768px) {
+  @media (min-width: 768px) {
     height: 300px;
     border: 3px dashed c.$orangered;
     border-top-left-radius: $border-radius - $border-width;
@@ -83,46 +90,27 @@ $pattern: 'polkadots.svg';
     border-top-right-radius: 50%;
     border-bottom-right-radius: 50%;
   }
-
 }
 
-.instructionsContainer {
-  grid-area: instructions;
-  margin-bottom: 20px;
-  padding: 0 10px;
-
-  @media(min-width: 768px) {
-    padding: 0 $layout-padding-lg;
-    ;
-  }
-}
-
-.ingredientsContainer {
+.ingredients {
   grid-area: ingredients;
-  line-height: 1.6;
-  height: 100%;
-  padding: 0 10px;
-
-  @media(min-width: 768px) {
-    padding: 0;
-  }
 }
 
 .instructions {
+  grid-area: instructions;
   display: flex;
   flex-direction: column;
   line-height: 1.6;
+  margin-bottom: 20px;
+  padding: 0 10px;
+
+  @media (min-width: 768px) {
+    padding: 0 $layout-padding-lg;
+  }
 
   span:not(:last-child) {
     margin-bottom: 10px;
   }
-}
-
-.card {
-  line-height: 1.5;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  width: 100%;
 }
 
 .animated {
