--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,16 +1,27 @@
 @mixin flex-container($align, $justify, $direction) {
-	display: flex;
-	align-items: $align;
-	justify-content: $justify;
-	flex-direction: $direction;
+  display: flex;
+  align-items: $align;
+  justify-content: $justify;
+  flex-direction: $direction;
 }
 
-@mixin font-source-sans($size: false, $color: false, $weight: false,  $lh: false) {
-	font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-	@if $size { font-size: $size; }
-	@if $color { color: $color; }
-	@if $weight { font-weight: $weight; }
-	@if $lh { line-height: $lh; }
+@mixin font-source-sans(
+  $size: false,
+  $color: false,
+  $weight: false,
+  $lh: false
+) {
+  font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+  @if $size {
+    font-size: $size;
+  }
+  @if $color {
+    color: $color;
+  }
+  @if $weight {
+    font-weight: $weight;
+  }
+  @if $lh {
+    line-height: $lh;
+  }
 }
-
-
