--- a/src/utils/icons.module.scss
+++ b/src/utils/icons.module.scss
@@ -1,4 +1,9 @@
 .icon {
-     width: 32px;
-     height: 32px;
+  width: 32px;
+  height: 32px;
+}
+
+.allergensIcon {
+  width: 25px;
+  height: 25px;
 }
