--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-@use 'colors' as c;
+@use 'colors'as c;
 
 .container {
   position: fixed;
@@ -8,31 +8,42 @@
   background-color: c.$honeydew;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   width: 100%;
   padding: 20px 0 20px 10px;
+
   h1 {
     font-family: 'Mali', cursive;
     padding-right: 10px;
     font-size: 2rem;
   }
+
   @media (min-width: 500px) {
     padding: 10px 20px;
     position: relative;
     height: 50px;
     margin-bottom: 20px;
   }
+
   @media (min-width: 768px) {
     padding: 20px 0;
     height: auto;
     margin-bottom: 0;
   }
+
   .subtitle {
     display: none;
+
     @media (min-width: 500px) {
       display: block;
       padding-left: 20px;
     }
   }
+}
+
+.title {
+  display: flex;
+  align-items: center;
 }
 
 h1,
