add Homepage component and adjust some style

--- a/src/styles/slickCustomStyle.scss
+++ b/src/styles/slickCustomStyle.scss
@@ -1,5 +1,5 @@
 // to avoid the slider breaking from setting display: flex to father
-@use 'colors' as c;
+@use 'colors'as c;
 
 $chev: '/icons/misc/chev.svg';
 
@@ -9,6 +9,7 @@ $chev: '/icons/misc/chev.svg';
 
 .slick-list {
   margin: 0px 0px 60px;
+
   @media (min-width: 1024px) {
     margin: 0;
   }
@@ -27,10 +28,12 @@ $chev: '/icons/misc/chev.svg';
   left: 0;
   padding: 10px 0;
   z-index: 999;
+
   @media (min-width: 500px) {
     height: 60px;
     z-index: 0;
   }
+
   @media (min-width: 768px) {
     position: relative;
     height: 50px;
@@ -61,12 +64,13 @@ $chev: '/icons/misc/chev.svg';
   font-weight: 400;
   transform: scale(2);
   transition: transform 0.2s ease-out;
+
   @media (min-width: 768px) {
     padding: 20px;
   }
 }
 
-li > .sliderPaginationIndex {
+li>.sliderPaginationIndex {
   font-size: 1.2rem;
 
   &:hover {
@@ -96,28 +100,36 @@ li > .sliderPaginationIndex {
 .slick-next {
   display: flex !important;
   align-items: center;
-  position: fixed;
   height: 100%;
   width: 67px;
   background-color: c.$honeydew;
   transition: background-color 0.3s ease-in, width 0.3s ease-in,
     height 0.3s ease-in, font-weight 0.3s ease-in;
+
   @media (max-width: 500px) {
     bottom: 0;
   }
+
+  @media (max-width: 767px) {
+    position: fixed;
+  }
+
   @media (min-width: 1440px) {
     width: 105px;
   }
+
   &:hover {
     background-color: c.$honeydew;
     height: 100%;
     cursor: pointer;
     transition: background-color 0.1s ease-out, width 0.1s ease-out,
       height 0.1s ease-out, font-weight 0.1s ease-out;
+
     @media (min-width: 1440px) {
       width: 105px;
     }
   }
+
   &:focus {
     background-color: c.$honeydew;
   }
@@ -132,9 +144,11 @@ li > .sliderPaginationIndex {
   height: 28px;
   width: 28px;
 }
+
 .slick-prev:before {
   transform: rotate(90deg);
 }
+
 .slick-next:before {
   transform: rotate(-90deg);
 }
