--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,3 +1,4 @@
 $honeydew: honeydew;
-$dark-green: #56a579;
 $orangered: orangered;
+$primaryColor: #80b380;
+$secondaryColor: rgb(128 179 128 / 40%);
