rename color var

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -48,7 +48,7 @@
 
 h1,
 .subtitle {
-  color: c.$dark-green;
+  color: c.$primaryColor;
 }
 
 .logo {
@@ -58,6 +58,6 @@ h1,
 }
 
 .leaf {
-  fill: c.$dark-green;
+  fill: c.$primaryColor;
   width: 30px;
 }
