rename and replace color variables

--- a/src/components/CarouselVegList/CarouselVegList.module.scss
+++ b/src/components/CarouselVegList/CarouselVegList.module.scss
@@ -1,4 +1,4 @@
-@use 'colors' as c;
+@use 'colors'as c;
 
 .container {
   display: flex;
@@ -17,5 +17,5 @@
   align-items: center;
   flex-direction: column;
   font-weight: 400;
-  color: c.$orangered;
+  color: c.$accentColor;
 }
