--- a/src/components/RecipesList/RecipesList.module.scss
+++ b/src/components/RecipesList/RecipesList.module.scss
@@ -43,7 +43,7 @@ $layout-padding-lg: 20px;
   }
 
   &:first-letter {
-    color: c.$orangered;
+    color: c.$accentColor;
     font-weight: 600;
   }
 }
