--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,4 @@
-$honeydew: honeydew;
-$orangered: orangered;
+$brandColor: honeydew;
+$accentColor: orangered;
 $primaryColor: #80b380;
 $secondaryColor: rgb(128 179 128 / 40%);
