--- a/src/components/CarouselMonth/CarouselMonth.module.scss
+++ b/src/components/CarouselMonth/CarouselMonth.module.scss
@@ -1,14 +1,16 @@
-@use 'colors' as c;
+@use 'colors'as c;
 
 .container {
   @media (max-width: 500px) {
     padding: 80px 15px;
   }
+
   padding: 10px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   @media (min-width: 768px) {
     height: 65vh;
   }
@@ -22,10 +24,12 @@
   @media (max-width: 500px) {
     margin-bottom: 0;
   }
+
   color: #000;
   font-size: 1.5rem;
   margin-bottom: 20px;
+
   &:first-letter {
-    color: c.$orangered;
+    color: c.$accentColor;
   }
 }
