--- a/src/components/FiltersContainer/Select.scss
+++ b/src/components/FiltersContainer/Select.scss
@@ -8,7 +8,7 @@
     box-shadow: none;
     border: none;
     background-color: transparent;
-    border-bottom: 2px dashed c.$orangered;
+    border-bottom: 2px dashed c.$accentColor;
     border-radius: 0;
 
     &:hover {
@@ -53,7 +53,7 @@
       }
 
       &:first-letter {
-        color: c.$orangered;
+        color: c.$accentColor;
       }
     }
   }
