--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   z-index: 9999;
-  background-color: c.$honeydew;
+  background-color: c.$brandColor;
   display: flex;
   align-items: center;
   justify-content: space-between;
