--- a/src/components/Subtitle/Subtitle.module.scss
+++ b/src/components/Subtitle/Subtitle.module.scss
@@ -1,10 +1,11 @@
-@use 'colors' as c;
+@use 'colors'as c;
 
 .subtitle {
   font-weight: 400;
   margin-bottom: 0.8em;
   font-size: 1.1rem;
+
   &:first-letter {
-    color: c.$orangered;
+    color: c.$accentColor;
   }
 }
