--- a/src/styles/slickCustomStyle.scss
+++ b/src/styles/slickCustomStyle.scss
@@ -23,7 +23,7 @@ $chev: '/icons/misc/chev.svg';
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  background-color: c.$honeydew;
+  background-color: c.$brandColor;
   right: 0;
   left: 0;
   padding: 10px 0;
@@ -49,7 +49,7 @@ $chev: '/icons/misc/chev.svg';
   transition: transform 0.3s ease-in;
 
   &:hover {
-    color: c.$orangered;
+    color: c.$accentColor;
     transform: scale(2);
     transition: transform 0.2s ease-out;
   }
@@ -60,7 +60,7 @@ $chev: '/icons/misc/chev.svg';
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  color: c.$orangered;
+  color: c.$accentColor;
   font-weight: 400;
   transform: scale(2);
   transition: transform 0.2s ease-out;
@@ -102,7 +102,7 @@ li>.sliderPaginationIndex {
   align-items: center;
   height: 100%;
   width: 67px;
-  background-color: c.$honeydew;
+  background-color: c.$brandColor;
   transition: background-color 0.3s ease-in, width 0.3s ease-in,
     height 0.3s ease-in, font-weight 0.3s ease-in;
 
@@ -119,7 +119,7 @@ li>.sliderPaginationIndex {
   }
 
   &:hover {
-    background-color: c.$honeydew;
+    background-color: c.$brandColor;
     height: 100%;
     cursor: pointer;
     transition: background-color 0.1s ease-out, width 0.1s ease-out,
@@ -131,7 +131,7 @@ li>.sliderPaginationIndex {
   }
 
   &:focus {
-    background-color: c.$honeydew;
+    background-color: c.$brandColor;
   }
 }
 
