--- a/src/components/FiltersContainer/Select.scss
+++ b/src/components/FiltersContainer/Select.scss
@@ -8,7 +8,7 @@
     box-shadow: none;
     border: none;
     background-color: transparent;
-    border-bottom: 2px dashed c.$accentColor;
+    border-bottom: 2px dashed c.$secondaryColor;
     border-radius: 0;
 
     &:hover {
