--- a/src/components/FilterAllergens/FilterAllergens.module.scss
+++ b/src/components/FilterAllergens/FilterAllergens.module.scss
@@ -1,1 +1,16 @@
+@use 'colors'as c;
 
+.btn {
+  padding: 10px;
+  border: 2px dashed c.$primaryColor;
+  border-radius: 4px;
+  color: c.$primaryColor;
+  background: transparent;
+  cursor: pointer;
+  transition: transform 0.1s ease-in;
+
+  &:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 2px 5px 0 c.$secondaryColor;
+  }
+}
