--- a/src/components/FilterAllergens/FilterAllergens.module.scss
+++ b/src/components/FilterAllergens/FilterAllergens.module.scss
@@ -1,16 +1,121 @@
 @use 'colors'as c;
+$time: 0.1s;
+
+.form {
+  width: 250px;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+
+.text {
+  width: 70%;
+  font-weight: 700;
+
+  &:first-letter { 
+    color:c.$accentColor;
+  }
+}
+
+.checkboxLabel {
+  display: flex;
+  justify-content: space-between;
+  text-transform: capitalize;
+  flex-direction: row-reverse;
+  margin-bottom: 10px;
+  width: 110px;
+  margin-right: 12px;
+}
+
+.checkboxLabel input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkboxLabel .checkboxCustom { // unchecked
+  position: relative;
+  top: 0;
+  left: 0;
+  height: 24px;
+  width: 24px;
+  border-color: transparent;
+  border-radius: 5px;
+  border: 2px solid c.$primaryColor;
+  background-color: transparent;
+  transition: all $time ease-out;
+  -webkit-transition: all $time  ease-out;
+  cursor: pointer;
+  margin-right: 5px;
+
+  &:hover {
+    border-color: darken( c.$primaryColor, 10%);
+    background: c.$secondaryColor;
+  }
+}
+
+.checkboxLabel .checkboxCustom:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  height: 0;
+  width: 0;
+  opacity: 1;
+  transform: rotate(0deg) scale(0);
+   transition: all $time  ease-out;
+  -webkit-transition: all $time  ease-out;
+}
+
+
+.checkboxLabel input:checked ~ .checkboxCustom { //checked
+  background-color: transparent;
+  border-radius: 5px;
+  transform: rotate(0deg) scale(1);
+  opacity: 1;
+  border: 2px solid darken( c.$primaryColor, 10%);
+  &:hover {
+    background: c.$secondaryColor;
+  }
+}
+
+.checkboxLabel input:checked ~ .checkboxCustom:after {
+  transform: rotate(45deg) scale(1);
+  opacity: 1;
+  left: 6px;
+  top: 1px;
+  width: 6px;
+  height: 12px;
+  border: solid  darken( c.$primaryColor, 10%);
+  border-width: 0 2px 2px 0;
+  background-color: transparent;
+  border-radius: 0;
+}
+
 
 .btn {
   padding: 10px;
   border: 2px dashed c.$primaryColor;
   border-radius: 4px;
-  color: c.$primaryColor;
+  color: c.$black;
   background: transparent;
   cursor: pointer;
   transition: transform 0.1s ease-in;
+  font-family: 'Mali', cursive;
+  font-weight: 700;
+
+ 
 
   &:hover {
     transform: translateY(-2px);
     box-shadow: 0 2px 5px 0 c.$secondaryColor;
+    background: c.$secondaryColor;
+     &:first-letter { 
+      color:c.$accentColor;
+    }
   }
 }
