--- a/src/components/FiltersContainer/FiltersContainer.module.scss
+++ b/src/components/FiltersContainer/FiltersContainer.module.scss
@@ -2,10 +2,11 @@
   // height: 50px;
   cursor: pointer;
   z-index: 2;
-  padding: 20px 50px 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  width: 800px;
   height: fit-content;
+  margin: 0 auto;
 
   &>:first-child {
     margin-right: 50px;
