--- a/src/components/FiltersContainer/Select.scss
+++ b/src/components/FiltersContainer/Select.scss
@@ -64,9 +64,11 @@
     align-items: center;
     flex-wrap: wrap;
     text-transform: capitalize;
+    padding: 10px 20px 10px 0;
+    height: 52px;
+    color: c.$primaryColor;
 
     >div {
-      padding: 10px 20px 10px 0;
       display: flex;
       align-items: center;
     }
