--- a/src/components/CarouselMonth/CarouselMonth.module.scss
+++ b/src/components/CarouselMonth/CarouselMonth.module.scss
@@ -11,9 +11,9 @@
   align-items: center;
   justify-content: center;
 
-  @media (min-width: 768px) {
+  /*@media (min-width: 768px) {
     height: 65vh;
-  }
+  }*/
 }
 
 .container header {
