--- a/src/components/FiltersContainer/Select.scss
+++ b/src/components/FiltersContainer/Select.scss
@@ -4,7 +4,7 @@
   &__control {
     cursor: pointer;
     display: flex;
-    width: 100%;
+    width: 270px;
     box-shadow: none;
     border: none;
     background-color: transparent;
@@ -23,6 +23,19 @@
       cursor: not-allowed;
       border-color: grey;
     }
+  }
+
+  &__container {
+    border: none;
+    width: 100%;
+  }
+
+  &__menu {
+    margin: 0;
+    padding: 0;
+    border: 2px dashed c.$accentColor;
+    border-top: none;
+    padding-top: 0;
   }
 
   &__option {
@@ -64,8 +77,7 @@
     align-items: center;
     flex-wrap: wrap;
     text-transform: capitalize;
-    padding: 10px 20px 10px 0;
-    height: 52px;
+    padding: 0 20px 10px 0;
     color: c.$primaryColor;
 
     >div {
